--- a/Pages/Pizza.cshtml
+++ b/Pages/Pizza.cshtml
@@ -1,7 +1,7 @@
 @page
 @model RazorPizzeria.Pages.PizzaModel
+@using RazorPizzeria.Models
 @{
-
 }
 <div class="text-center">
   <div class="mainText">
@@ -18,13 +18,24 @@
           </div>
           <div class="col-8 align-items-center">
             <div class="align-middle makeYourOwnText">
-              <h3 style="text-align:left">Create your own Pizza</h3>
-              <p style="text-align:left">Make your own Pizza with our PIzzaMaker!</p>
+              <h3 style="text-align:left;">Create your own Pizza</h3>
+              <p style="text-align:left;">Make your own Pizza with our PIzzaMaker!</p>
               <a class="btn btn-primary" style="float: left" asp-area="" asp-page="Forms/CustomPizza">Try Now!</a>
             </div>
           </div>
         </div>
       </div>
+        @foreach (PizzasModel pizza in Model.Pizzas)
+        {
+          var imagePath = "~/images/Pizzas/" + (pizza.ImageTitle + ".png");
+
+          <div class="col-4 mb-5">
+            <img src=@imagePath class="w-100" asp-append-version="true" />
+            <a class="btn btn-primary mt-1" asp-area="" asp-page="Checkout/Checkout" asp-route-ImageTitle=@pizza.ImageTitle
+            asp-route-PizzaPrice=@pizza.FinalPrice>Get This Pizza!</a>
+            <br/>
+          </div>
+        }
     </div>
   </div>
 </div>
